# Corsair

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  security-scan.yml
RESEARCH/: 2026-04-18-cache-module-security-audit.md
corsair/: __init__.py  cli.py  models.py  scanner.py  scoring.py
corsair/analyzers/: __init__.py  additional.py  base.py  cookies.py  cors.py  cross_origin.py  csp.py  csp_enhanced.py  hsts.py  permissions.py  referrer.py  reporting.py  xcontent.py  xframe.py
corsair/cache/: __init__.py  altsvc.py  auditor.py  findings.py  oracle.py  probe.py  reflect.py
corsair/compliance/: __init__.py  frameworks.py
corsair/cors/: __init__.py  analyzers.py  auditor.py  findings.py  passive.py  probe.py
corsair/fetch_metadata/: __init__.py  auditor.py  findings.py  probe.py
corsair/fingerprint/: __init__.py  engine.py  signatures.py
corsair/h3/: __init__.py  auditor.py  client.py  diff.py  findings.py  probe.py
corsair/history/: __init__.py  database.py  drift.py
corsair/integrity_policy/: __init__.py  auditor.py  body.py  findings.py  parser.py
corsair/intelligence/: __init__.py  cisa_kev.py  cve_correlator.py
corsair/mcp/: __init__.py  server.py
corsair/reporters/: __init__.py  base.py  console.py  html_reporter.py  json_reporter.py  sarif.py
corsair/tls/: __init__.py  analyzers.py  auditor.py  findings.py
corsair/utils/: __init__.py  logger.py
docs/superpowers/plans/: 2026-04-15-web-cache-poisoning-plan.md  2026-04-18-cache-module-v041-hardening-plan.md  2026-04-20-cors-dast-plan.md  2026-04-24-alt-svc-hardening-plan.md  2026-04-24-cors-dast-wave2-plan.md  2026-04-26-fetch-metadata-probing-plan.md  2026-05-03-reporting-endpoints-coherence-plan.md  2026-05-04-integrity-policy-validation-plan.md  2026-05-07-http3-validation-plan.md
docs/superpowers/specs/: 2026-04-15-web-cache-poisoning-design.md  (+7 more)
tests/: conftest.py  h3_server.py  test_analyzers.py  test_cache_altsvc.py  test_cache_altsvc_integration.py  test_cache_auditor_live.py  test_cache_auditor_unit.py  test_cache_findings.py  test_cache_oracle.py  test_cache_probe.py  test_cache_reflect.py  test_cors_analyzers.py  test_cors_auditor_unit.py  test_cors_bypass_matrix.py  test_cors_findings.py  test_cors_passive.py  test_cors_probe.py  test_cors_smoke.py  test_cors_wave2_auditor.py  test_cors_wave2_classifier.py  test_cors_wave2_findings.py  test_fetch_metadata_auditor.py  test_fetch_metadata_findings.py  test_fetch_metadata_probe.py  test_h3_auditor.py  test_h3_diff.py  test_h3_findings.py  test_h3_integration.py  test_h3_probe.py  test_integrity_policy_auditor.py  test_integrity_policy_body.py  test_integrity_policy_parser.py  test_reporting_coherence.py  test_scanner_cache_integration.py  test_scanner_cors_integration.py  test_scanner_tls_integration.py  test_scoring.py  test_tls_analyzers.py  test_tls_auditor.py  test_tls_auditor_unit.py  (+2 more)
