[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corsair-scan"
version = "0.5.1"
description = "☠ HTTP Security Header Scanner - AI-powered analysis, CVE correlation, and MCP integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Fevra", email = "fevra@users.noreply.github.com"}
]
maintainers = [
    {name = "Fevra", email = "fevra@users.noreply.github.com"}
]
keywords = [
    "security",
    "http-headers",
    "csp",
    "hsts",
    "vulnerability-scanner",
    "security-scanner",
    "pentest",
    "owasp",
    "corsair",
    "header-analysis",
    "cve",
    "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
# TLS/SSL auditing (sslyze is AGPL-3.0; kept optional to preserve MIT license)
tls = [
    "sslyze>=6.0.0",
]
# Full installation with all features
full = [
    "sslyze>=6.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
]
# MCP/AI integration (requires Python 3.10+)
mcp = [
    "fastmcp>=2.0.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "sslyze>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/fevra-dev/Corsair"
Documentation = "https://github.com/fevra-dev/Corsair#readme"
Repository = "https://github.com/fevra-dev/Corsair"
Issues = "https://github.com/fevra-dev/Corsair/issues"
Changelog = "https://github.com/fevra-dev/Corsair/releases"

[project.scripts]
corsair = "corsair.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["corsair*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that hit external services (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
